# hreads

./: .gitignore  Cargo.toml  Makefile  README.md
.zed/: tasks.json
src/: dispatch.rs  lib.rs  main_thread.rs  parallel.rs  spawn.rs
