[package]
name = "hreads"
version = "0.1.0"
edition = "2024"
description = "Multithreading primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vladasz/hreads"


[dependencies]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "~1.13"
pollster = "~0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "~0.3", features = ["futures"] }
wasm-bindgen-futures = "~0.4"

[build-dependencies]
plat = "~0.5"
